<resources>
    <string name="app_name">Thousand Courses</string>
    <string name="login_text_title">Вход</string>
    <string name="login_email_text">Email</string>
    <string name="login_input_email_hint">example@gmail.com</string>
    <string name="login_password_text">Пароль</string>
    <string name="login_input_password_hint">Введите пароль</string>
    <string name="login_button_text">Вход</string>
    <string name="login_no_account_text">Нету аккаунта?</string>
    <string name="login_registration_text">Регистрация</string>
    <string name="logib_forgot_password_text">Забыл пароль</string>
    <string name="main_search_input_hint">Search courses...</string>
    <string name="main_filter_text">По дате добавления</string>
    <string name="course_item_more_text">Подробнее</string>
    <string name="favorites_title_text">Избранное</string>
</resources>