<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_dark"
    android:padding="24dp">

    <TextView
        android:id="@+id/login_text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:text="@string/login_text_title"
        android:textColor="@android:color/white"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login_email_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/login_email_text"
        android:textSize="16sp"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_text_title" />

    <EditText
        android:id="@+id/login_email_input"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_input_field"
        android:hint="@string/login_input_email_hint"
        android:textSize="14sp"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="16dp"
        android:textColor="@android:color/white"
        android:textColorHint="@color/hint_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_email_text" />

    <TextView
        android:id="@+id/login_password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/login_password_text"
        android:textSize="16sp"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_email_input" />

    <EditText
        android:id="@+id/login_password_input"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_input_field"
        android:hint="@string/login_input_password_hint"
        android:inputType="textPassword"
        android:textSize="14sp"
        android:paddingHorizontal="16dp"
        android:textColor="@android:color/white"
        android:textColorHint="@color/hint_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_password_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_proceed_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/brand_green"
        android:text="@string/login_button_text"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:cornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_password_input" />

    <TextView
        android:id="@+id/login_no_account_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/login_no_account_text"
        android:textSize="12sp"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toStartOf="@+id/login_registration_clickable_text"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_proceed_button" />

    <TextView
        android:id="@+id/login_registration_clickable_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/login_registration_text"
        android:textSize="12sp"
        android:textColor="@color/brand_green"
        app:layout_constraintBaseline_toBaselineOf="@id/login_no_account_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/login_no_account_text" />

    <TextView
        android:id="@+id/login_forgot_password_clickable_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/logib_forgot_password_text"
        android:textSize="12sp"
        android:textColor="@color/brand_green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_no_account_text" />

    <View
        android:id="@+id/login_divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="32dp"
        android:background="#33FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_forgot_password_clickable_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_vk_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:backgroundTint="#2683ED"
        app:icon="@drawable/ic_vk"
        app:iconSize="32dp"
        app:iconGravity="textStart"
        app:cornerRadius="30dp"
        app:iconPadding="0dp"
        app:layout_constraintEnd_toStartOf="@+id/login_ok_button"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_divider" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_ok_button"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:minHeight="0dp"
        android:minWidth="0dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:padding="0dp"
        android:background="@drawable/button_gradient"
        app:backgroundTint="@null"
        app:icon="@drawable/ic_ok"
        app:iconSize="32dp"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/login_vk_button"
        app:layout_constraintTop_toTopOf="@+id/login_vk_button"
        app:layout_constraintBottom_toBottomOf="@+id/login_vk_button" />

</androidx.constraintlayout.widget.ConstraintLayout>